--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "intelligentdirectory",
   "version": "1.0.0",
-  "description": "The Intelligent Directory has ability to recognize and sort a downloaded file and move it to the specific directory.",
+  "description": "Tool to automatic recognize and move files to the specific directories.",
   "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {},
+  "dependencies": {
+    "app-root-path": "^3.0.0"
+  },
+  "devDependencies": {
+    "jest": "^25.1.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config=jest.config.js --coverage"
   },
   "repository": {
     "type": "git",
